# python-sdk

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  justfile  model.py  pyproject.toml
.github/workflows/: main.yml  version.yml
authup/: __init__.py  authup.py  permissions.py  schemas.py  settings.py  token.py
authup/client/: __init__.py  base_resource_client.py  client.py  decorators.py
authup/client/resource_clients/: realm.py
authup/domains/: base.py  base_api.py  constants.py  types_base.py
authup/domains/attempt/attempt_activation/: types.py
authup/domains/attempt/attempt_login/: types.py
authup/domains/attempt/attempt_reset/: types.py
authup/domains/authorization_code/: types.py
authup/domains/client/: api.py  types.py
authup/domains/client/client_scope/: api.py  types.py
authup/domains/clients/: base_resource_client.py  client.py
authup/domains/clients/resource_clients/: client.py  permission.py  realm.py  robot.py  role.py  user.py
authup/domains/identity_provider/: api.py  types.py
authup/domains/identity_provider/identity_provider_account/: types.py
authup/domains/identity_provider/identity_provider_attribute/: types.py
authup/domains/identity_provider/identity_provider_role/: api.py  types.py
authup/domains/key/: types.py
authup/domains/permission/: api.py  types.py
authup/domains/realm/: api.py  types.py
authup/domains/robot/: api.py  types.py
authup/domains/robot/robot_permission/: api.py  types.py
authup/domains/robot/robot_role/: api.py  types.py
authup/domains/role/: api.py  types.py
authup/domains/role/role_attribute/: api.py  types.py
authup/domains/role/role_permission/: api.py  types.py
authup/domains/schemas/: client.py  permission.py  realm.py  robot.py  role.py  token.py  user.py
authup/domains/scope/: api.py  types.py
authup/domains/user/: api.py  types.py
authup/plugins/: asgi.py  base.py  fastapi.py  flask.py  httpx.py  requests.py
authup/schemas/: oauth_2.py  realm.py  robot.py  token.py  user.py
authup/tests/: conftest.py  test_authup.py  test_permissions.py  test_settings.py  test_token.py
authup/tests/client/: test_client.py  test_permission_client.py  test_realm_client.py
authup/tests/plugins/: test_asgi.py  test_fastapi.py  test_httpx.py  test_requests.py
authup_data/: authup.api.conf  authup.ui.conf
(+14 files in other folders)
