[tool.poetry]
name = "authup-py"
version = "0.1.0"
description = ""
authors = ["Michael Graf <michael.graf3110@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
fastapi = "^0.88.0"
flake8 = "^6.0.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
