[tool.poetry]
name = "authup"
version = "0.3.0"
description = "Python plugins for the Authup authentication and authorization framework"
authors = ["Michael Graf <michael.graf3110@gmail.com>"]
license = "MIT"
repository = "https://github.com/migraf/authup-py.git"
readme = "README.md"
homepage = "https://authup.org"


[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.2"
pydantic = "^1.10.4"
fastapi = {version="^0.78.0", optional=true}
requests = {version="^2.26.0", optional=true}
flask = {version="^2.0.0", optional=true}
starlette = {version="*", optional=true}

[tool.poetry.extras]
fastapi = ["fastapi"]
requests = ["requests"]
flask = ["flask"]
asgi = ["starlette"]
all = ["fastapi", "requests", "flask"]


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.201"
pytest = "^7.2.0"
black = "^22.12.0"
coverage = "^7.0.1"
python-dotenv = "^0.21.0"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.20.3"
pre-commit = "^2.21.0"


[tool.ruff]
line-length = 120


# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I001"]
ignore = []
per-file-ignores = { "*/__init__.py" = ["F401"] }

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
